== Trunk (Git)

* _IMPORTANT_ Breaking change:

  * Removed init.rb auto-require of webrat/rails
  * Removed auto-require of webrat/rails when requiring webrat when RAILS_ENV is
    defined
  
  In your env.rb file, ensure you have:
  
    require "webrat/rails"
  
* Major enhancements

  * Added select_time, select_date, and select_datetime to API. [#36] (Ben Mabey)
  * Use Hpricot and REXML when not parsing with Nokogiri (on JRuby, for example)

* Minor enhancements

  * Maximize the browser window after initializing Selenium (Luke Melia)
  * Better inspect output for Webrat elements
  * Sets the Webrat mode with Configuration#mode= in the config block [#85] (Mike Gaffney)
  * Detect if the document is XML or HTML using the Content-Type when in Rails mode
  * Expose #selenium method for direct access to Selenium client
  * Check nokogiri gem version before requiring nokogiri
  * Include the Selenium server jar file in the gem (Bryan Helmkamp, Ben Schwarz)
  * Added key_down, key_up and fire_event to Selenium session (Fernando Garcia)
  * Fix outputing README during Rails plugin install (Fernando Garcia)
  * Strip newlines when matching label text (Miha Filej)
  * Add simple support for accessing Webrat's matchers from RSpec by requiring
    "webrat/rspec-rails" (David Chelimsky)
  * Support save_and_open_page in Windows and Cygwin (Mike Gaffney)
  * Added RadioField#checked? to indicated whether or not a radio button is checked
    (Luke Melia)
  * Add spec:jruby rake task for running Webrat's spec suite with JRuby
  * Added field_by_xpath to locate a Webrat::Field using arbitrary XPath expressions
  * Helpful error message for missing option values [#40] (Ben Mabey)
  * Add set_hidden_field method (Noah Davis, Bryan Helmkamp)
  * Add submit_form method for submitting a form by ID (Noah Davis, Bryan Helmkamp)
  * Switch to using Nokogiri.parse for simple XML/XHTML autodetection [#66]
  * Removed Webrat.root method, which seemed to be unused